# openai-sdk-rust

./: Cargo.toml  README.md
examples/: show_models.rs
src/: features.rs  lib.rs  openai.rs  structure.rs
src/features/: chatgpt.rs  models.rs
src/openai/: features.rs
src/openai/features/: models.rs
src/structure/: models.rs  perm.rs  response.rs
