[package]
name = "chatgpt-basic-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.42.0"
delegate-attr = "0.2.9"
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
url = "2.3.1"
